Refactor DeliverySystem and DeliverySystemDemo to enhance order creation and demonstration
- Updated the order creation process in both DeliverySystem and DeliverySystemDemo classes to utilize MenuItem and Location models, improving clarity and structure.
- Created sample menu items (Pizza and Drink) and integrated them into the order, ensuring proper representation of the delivery system's functionality.
- Enhanced the demonstration methods to provide a more realistic simulation of order processing, including customer email and location details.

These changes improve the usability and testing capabilities of the delivery system.